# News-Intelligence-Public

./: .aider.chat.history.md  .aider.input.history  .cursorignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AIDER_FILE_ACCESS_GUIDE.md  AIDER_USAGE_GUIDE.md  AI_SESSION_LOG.md  API_ANALYSIS_REPORT.md  API_ENDPOINTS_REVIEW_COMPLETE.md  API_ROUTES_AUDIT_SUMMARY.md  API_SCHEMA_VERIFICATION_REPORT.md  API_WEB_INTERFACE_MAPPING.md  ARCHITECTURE_ANALYSIS.md  ARTICLE_ENHANCEMENT_RECOMMENDATIONS.md  AUTOMATION_ANALYSIS.md  AUTOMATION_PLAN.md  BATCH_PROCESSOR_TEST_RESULTS.md  BUILD_OPTIMIZATION_PLAN.md  BUTTON_FUNCTIONALITY_ANALYSIS.md  CLEANUP_SUMMARY.md  CLOSED_FEEDBACK_LOOP_IMPLEMENTATION.md  CODEBASE_SUMMARY.md  CODE_ASSISTANT_README.md  CODE_ASSISTANT_SETUP_COMPLETE.md  CODE_REVIEW_REPORT.md  CODING_STYLE_GUIDE.md  COMPREHENSIVE_MIGRATION_PLAN.md  CONNECTIVITY_FIXES_COMPLETE.md  CURSOR_AI_SETUP.md  CURSOR_API_CONFIGURATION.md  CURSOR_DESKTOP_INTEGRATION.md  CURSOR_SETUP_GUIDE.md  CURSOR_SIMPLIFIED_SETUP.md  Caddyfile.example  DATABASE_SCHEMA_ANALYSIS.md  DEDUPLICATION_SYSTEM_DOCUMENTATION.md  (+148 more)
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.cursor/: ai-enforcement.md  ai-workflow.js  keybindings.json  settings.json
analysis/: INFRASTRUCTURE_HEALTH_2026-03-07.md  LOG_SUMMARY_2026-03-07.md  SYSTEM_CONTEXT.md
api/: Dockerfile  app.py  main.py  main_production.py  main_v4.py  process_articles.py  requirements.txt  start_dev_api.py  start_prod_api.py  targeted_fix.py  test_rag_system.py
archive/: README.md
configs/: ddns.env.example  doc_obfuscation.example.yaml  env.aggressive_burn_down.env  env.example  news-system.service  widow_public_demo.env.example
docs/: API_4_0_ARCHITECTURE_PLAN.md  API_DESIGN_PRINCIPLES.md  API_REFERENCE.md  API_TESTING_GUIDE.md  ARCHITECTURE_AND_OPERATIONS.md  ARCHIVE_CRITERIA_AND_BALANCE.md  ARCHIVE_RELOCATION.md  ARTICLE_SUGGESTION_SCORING_EXPLAINED.md  AUTOMATION_AND_LAST_24H_ACTIVITY.md  AUTOMATION_MANAGER_SCHEDULING.md  BACKEND_ASSESSMENT.md  BATCH_PROCESSING_DESIGN.md  BRIEFING_STRATEGY_AND_PROCESSES.md  BURNDOWN_CHECKPOINT_2026-03-27.md  CHRONOLOGICAL_TIMING.md  CLAIMS_TO_FACTS_ENTITY_RESOLUTION.md  CLAUDE_ASSESSMENT_SYSTEM_AND_GAPS.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CODEBASE_MAP.md  CODE_REVIEW_AND_RUN_CAVEATS.md  CODING_STYLE_GUIDE.md  COMMODITY_DATA_SOURCES.md  CONFIDENCE_BASED_TOPIC_CLUSTERING.md  CONFIGURATION_AUDIT.md  CONTENT_ANALYSIS_IMPLEMENTATION_PLAN.md  CONTENT_COLLECTION_AND_INSIGHT_EXPECTATIONS.md  CONTENT_QUALITY_ASSESSMENT.md  CONTEXTS_BY_DOMAIN.md  CONTEXT_CENTRIC_MIGRATION_READINESS.md  CONTEXT_CENTRIC_UPGRADE_PLAN.md  CONTROLLER_ARCHITECTURE.md  CRON_LOGS_AND_REPORT_FOR_CLAUDE.md  DASHBOARD_TOPICS_VERIFICATION.md  DATABASE.md  DATABASE_BACKUP.md  DATABASE_CONNECTION_AUDIT.md  DATABASE_DESIGN_PHILOSOPHY.md  DATABASE_MIGRATION_COMPLETE.md  DATABASE_MIGRATION_VERIFICATION.md  (+145 more)
infrastructure/: config-audit-phase4.1.md  migration-state.json  news-intelligence-api-public.service  newsplatform-backup.cron  newsplatform-secondary.service  secondary-machine-info.txt  widow-db-adjacent.cron
migration_scripts/: phase1_database_fixes.sql  phase1_file_cleanup.sh  phase2_service_consolidation.py  run_migration.py  validation_tests.py
monitoring/: prometheus.yml
nginx/: nginx.conf  nginx.frontend.conf  nginx.production.conf  public-demo-site.conf.example  widow-public-demo-site.conf.template
schema/: unified_schema.json
scripts/: NAS_MOUNT_ON_WIDOW.md  SCRIPTS_INDEX.md  ai_session_promote.sh  ai_session_rollback.sh  ai_session_start.sh  archive_logs_to_nas.sh  automation_run_analysis.py  backfill_entity_descriptions.py  backlog_burndown.sh  backlog_eta.py  backup_database.sh  bulk_cleanup_garbage_entities.py  bulk_prefilter.py  check_article_duplicates.sh  check_data_collection_health.py  check_for_duplicates.py  check_v7_data_collection.py  check_widow_entity_status.py  check_widow_entity_status.sh  commit_context_centric.sh  compare_backlog_snapshots.py  comprehensive_system_test.py  configure_widow_no_sleep.sh  create_market_storylines.py  create_market_storylines_db.py  cron_wikipedia_preseed.sh  daily_audit.sh  db_backup.sh  db_backup_single_latest.sh  db_backup_weekly.sh  db_full_inventory.py  db_maintenance_analyze.py  db_persistence_gates.py  ddns_update_duckdns.sh  decommission_nas_postgresql.sh  deploy_public_demo_to_widow.sh  deploy_to_widow.sh  diagnose_claims_to_facts.py  doc_obfuscation.py  docker-cleanup.service  (+105 more)
tests/: README.md  __init__.py  conftest.py  requirements.txt  run_tests.py  setup_test_environment.sh  test_article_service.py  test_basic.py  test_content_prioritization.py  test_db_endpoint.py  test_deduplication.py  test_functionality_comprehensive.py  test_processing.py  test_rss_collection.py  test_rss_deduplication.py  v4_comprehensive_test_suite.py
web/: .eslintignore  .eslintrc.js  .gitignore  .huskyrc  .lintstagedrc  .prettierignore  DEVELOPMENT_SETUP.md  ESLINT_SETUP.md  FRONTEND_STYLE_GUIDE.md  WEB_INTERFACE_FIX_COMPLETE.md  admin.html  api.html  index.html  nginx.conf  package-lock.json  (+8 more)
(+1975 files in other folders)
